--- a/src/main/resources/site/pages/main/main.page.html
+++ b/src/main/resources/site/pages/main/main.page.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="{{baseHref}}">
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>PWA Starter for Enonic</title>
+    <title>PWA Starter</title>
 
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="{{assetUrl}}/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{assetUrl}}/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{assetUrl}}/icons/favicon-16x16.png">
+    <link rel="mask-icon" href="{{assetUrl}}/icons/safari-pinned-tab.svg" color="#f53d3d">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-config" content="{{assetUrl}}/icons/browserconfig.xml" />
 
     <link rel="stylesheet" href="{{assetUrl}}/_styles.css" type="text/css"/>
     <script type="text/javascript" src="{{assetUrl}}/_all.js"></script>
