--- a/src/main/resources/site/pages/main/main.page.html
+++ b/src/main/resources/site/pages/main/main.page.html
@@ -13,6 +13,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="{{assetUrl}}/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="{{assetUrl}}/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="{{assetUrl}}/icons/favicon-16x16.png">
+    <link rel="manifest" href="{{baseHref}}manifest.json">
     <link rel="mask-icon" href="{{assetUrl}}/icons/safari-pinned-tab.svg" color="#f53d3d">
     <meta name="theme-color" content="#ffffff">
     <meta name="msapplication-config" content="{{assetUrl}}/icons/browserconfig.xml" />
