Changed build to dynamically inject service worker manifest into existing service worker. Renamed bundles from "_all.*" to "bundle.*"

--- a/src/main/resources/site/pages/main/main.page.html
+++ b/src/main/resources/site/pages/main/main.page.html
@@ -17,8 +17,8 @@
     <meta name="msapplication-config" content="{{baseHref}}browserconfig.xml" />
     <meta name="msapplication-TileColor" content="{{themeColor}}">
 
-    <link rel="stylesheet" href="{{baseHref}}_all.css" type="text/css"/>
-    <script type="text/javascript" src="{{baseHref}}_all.js"></script>
+    <link rel="stylesheet" href="{{baseHref}}bundle.css" type="text/css"/>
+    <script type="text/javascript" src="{{baseHref}}bundle.js"></script>
 
 </head>
 
