--- a/src/main/resources/site/pages/main/main.page.html
+++ b/src/main/resources/site/pages/main/main.page.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="{{baseHref}}">
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -11,14 +10,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{{icons.png_32}}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{icons.png_16}}">
 
-    <link rel="manifest" href="{{baseHref}}manifest.json">
+    <link rel="manifest" href="{{baseUrl}}/manifest.json">
     <link rel="mask-icon" href="{{assetUrl}}/icons/safari-pinned-tab.svg" color="#f53d3d">
     <meta name="theme-color" content="{{themeColor}}">
-    <meta name="msapplication-config" content="{{baseHref}}browserconfig.xml" />
+    <meta name="msapplication-config" content="{{baseUrl}}/browserconfig.xml" />
     <meta name="msapplication-TileColor" content="{{themeColor}}">
 
-    <link rel="stylesheet" href="{{baseHref}}bundle.css" type="text/css"/>
-    <script type="text/javascript" src="{{baseHref}}bundle.js"></script>
+    <link rel="stylesheet" href="{{baseUrl}}/bundle.css" type="text/css"/>
+    <script type="text/javascript" src="{{baseUrl}}/bundle.js"></script>
 
 </head>
 
@@ -27,10 +26,12 @@ We are live
 
 {{#isLive}}
 <script type="text/javascript">
-
+    if (document.location.href.endsWith('{{baseUrl}}') && !document.location.href.endsWith('/')) {
+        document.location = document.location.href + "/";
+    }
     if ('serviceWorker' in navigator) {
         navigator.serviceWorker
-                .register('{{baseHref}}sw.js', {scope: '{{baseHref}}'})
+                .register('{{baseUrl}}/sw.js', {scope: '{{baseUrl}}'})
                 .then(function(reg) {
                     console.log('Service Worker registered with scope '  + reg.scope);
                 }, function() {
