--- a/src/main/resources/site/pages/main/main.page.html
+++ b/src/main/resources/site/pages/main/main.page.html
@@ -10,14 +10,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{{icons.png_32}}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{icons.png_16}}">
 
-    <link rel="manifest" href="{{baseUrl}}/manifest.json">
-    <link rel="mask-icon" href="{{assetUrl}}/precache/icons/safari-pinned-tab.svg" color="#f53d3d">
+    <link rel="manifest" href="manifest.json">
+    <link rel="mask-icon" href="precache/icons/safari-pinned-tab.svg" color="#f53d3d">
     <meta name="theme-color" content="{{themeColor}}">
-    <meta name="msapplication-config" content="{{baseUrl}}/browserconfig.xml" />
+    <meta name="msapplication-config" content="browserconfig.xml" />
     <meta name="msapplication-TileColor" content="{{themeColor}}">
 
-    <link rel="stylesheet" href="{{assetUrl}}/precache/bundle.css" type="text/css"/>
-    <script type="text/javascript" src="{{assetUrl}}/precache/bundle.js"></script>
+    <link rel="stylesheet" href="precache/bundle.css" type="text/css"/>
+    <script type="text/javascript" src="precache/bundle.js"></script>
 
 </head>
 
