Made the app work even when site config is empty. Use site name as app's name/short name in manifest.json when it's not set up in the config.

--- a/src/main/resources/site/pages/main/main.page.html
+++ b/src/main/resources/site/pages/main/main.page.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>{{siteName}}</title>
 
+    {{#hasAppIcon}}
     <link rel="apple-touch-icon" sizes="180x180" href="{{icons.png_180}}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{icons.png_32}}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{icons.png_16}}">
+    {{/hasAppIcon}}
 
     <link rel="manifest" href="manifest.json">
     <link rel="mask-icon" href="precache/icons/safari-pinned-tab.svg" color="#f53d3d">
