Implemented async fetch of current city via API

--- a/src/main/resources/site/pages/main/main.page.html
+++ b/src/main/resources/site/pages/main/main.page.html
@@ -19,12 +19,13 @@
     <meta name="msapplication-TileColor" content="{{themeColor}}">
 
     <link rel="stylesheet" href="precache/bundle.css" type="text/css"/>
-    <script type="text/javascript" src="precache/bundle.js"></script>
+    <script type="text/javascript" src="precache/bundle.js" async></script>
 
 </head>
 
 <body>
-We are live
+
+<div id="pwa-container"></div>
 
 {{#isLive}}
 <script type="text/javascript">
